Fix ellipsis overflow

--- a/river.css
+++ b/river.css
@@ -44,6 +44,9 @@ body {
 
 .song {
 	cursor: default;
+}
+
+.tag {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
